--- a/index.html
+++ b/index.html
@@ -1,307 +1,139 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
   <title>Centro de Compras</title>
-  <meta name="description" content="Encontre as melhores ofertas em produtos de diversas lojas online no Centro de Compras." />
-  <meta name="keywords" content="e-commerce, compras online, ofertas, produtos" />
-  <meta name="author" content="Centro de Compras" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
-  <header class="main-header">
-    <div class="header-top">
-      <div class="container">
-        <div class="header-info">
-          <span><i class="fas fa-phone-alt"></i> (21) 9999-9999</span>
-          <span><i class="fas fa-envelope"></i> contato@centrodecompras.com</span>
-        </div>
-        <div class="header-links">
-          <a href="#" class="header-link">Cupons</a>
-        </div>
-      </div>
-    </div>
-
+  <!-- CABEÇALHO -->
+  <header>
     <div class="header-main">
-      <div class="container header-content">
-        <img src="https://via.placeholder.com/200x50/3483fa/fff?text=Centro+de+Compras" alt="Logo Centro de Compras" class="logo" />
-        <div class="search-section">
-          <input type="text" id="busca" placeholder="Pesquisar produtos..." aria-label="Pesquisar produtos" />
-          <button class="search-btn" aria-label="Buscar">
-            <i class="fas fa-search"></i>
-          </button>
-        </div>
-        <div class="header-actions">
-          <a href="https://wa.me/5511999999999" class="action-btn whatsapp-btn" aria-label="WhatsApp">
-            <i class="fab fa-whatsapp"></i> WhatsApp
-          </a>
-          <a href="https://t.me/centrodecompras" class="action-btn telegram-btn" aria-label="Telegram">
-            <i class="fab fa-telegram-plane"></i> Telegram
-          </a>
-          <a href="/admin-xyz-123.html" class="action-btn admin-btn" aria-label="Admin" style="display:none;">
-            <i class="fas fa-user-shield"></i> Admin
-          </a>
-        </div>
+      <div class="logo">Centro de Compras</div>
+      <nav class="nav-links">
+        <a href="#">Início</a>
+        <a href="#">Categorias</a>
+        <a href="#">Ofertas</a>
+        <a href="#">Contato</a>
+      </nav>
+      <div class="search-section">
+        <input type="text" placeholder="Buscar produtos...">
+        <button><i class="fa fa-search"></i></button>
       </div>
     </div>
-
-    <nav class="main-nav">
-      <div class="container nav-content">
-        <button class="categories-btn" id="categories-toggle" aria-label="Abrir categorias">
-          <i class="fas fa-bars"></i> Categorias
-        </button>
-        <div class="nav-links">
-          <a href="#" class="nav-link active">Início</a>
-          <a href="#" class="nav-link">Ofertas</a>
-          <a href="#" class="nav-link">Novidades</a>
-          <a href="#" class="nav-link">Contato</a>
-        </div>
-      </div>
-    </nav>
   </header>
 
-  <!-- Sidebar Categorias -->
-  <aside class="categories-sidebar" id="categories-sidebar">
-    <div class="sidebar-header">
-      <h3><i class="fas fa-list"></i> Categorias</h3>
-      <button class="close-sidebar" id="close-sidebar" aria-label="Fechar categorias">
-        <i class="fas fa-times"></i>
-      </button>
-    </div>
-    <ul class="categories-list">
-      <li class="category-item active" data-categoria="todas"><i class="fas fa-th"></i> Todas as Categorias</li>
-      <li class="category-item" data-categoria="eletronicos"><i class="fas fa-mobile-alt"></i> Eletrônicos</li>
-      <li class="category-item" data-categoria="moda"><i class="fas fa-tshirt"></i> Moda</li>
-      <li class="category-item" data-categoria="casa"><i class="fas fa-home"></i> Casa</li>
-      <li class="category-item" data-categoria="beleza"><i class="fas fa-magic"></i> Beleza</li>
-      <li class="category-item" data-categoria="esportes"><i class="fas fa-dumbbell"></i> Esportes</li>
-      <li class="category-item" data-categoria="infantil"><i class="fas fa-baby"></i> Infantil</li>
-      <li class="category-item" data-categoria="automotivo"><i class="fas fa-car"></i> Automotivo</li>
-      <li class="category-item" data-categoria="games"><i class="fas fa-gamepad"></i> Games</li>
-      <li class="category-item" data-categoria="livros"><i class="fas fa-book"></i> Livros</li>
-      <li class="category-item" data-categoria="fitness"><i class="fas fa-running"></i> Fitness</li>
-      <li class="category-item" data-categoria="pet"><i class="fas fa-paw"></i> Pet Shop</li>
-      <li class="category-item" data-categoria="jardinagem"><i class="fas fa-leaf"></i> Jardinagem</li>
-      <li class="category-item" data-categoria="gastronomia"><i class="fas fa-utensils"></i> Gastronomia</li>
-    </ul>
-  </aside>
-  <div class="overlay" id="overlay"></div>
-
-  <main class="main-content">
-    <!-- Ofertas do Dia - Banner Azul Compacto -->
-    <section class="offers-banner">
-      <div class="container banner-content">
-        <div class="banner-text">
-          <h1>🔥 Ofertas do Dia</h1>
-          <p>Economize até 70% em milhares de produtos!</p>
-        </div>
-        <div class="banner-stats">
-          <div class="stat-item">
-            <span class="stat-number">500+</span>
-            <span class="stat-label">Lojas</span>
-          </div>
-          <div class="stat-item">
-            <span class="stat-number">10K+</span>
-            <span class="stat-label">Produtos</span>
-          </div>
-          <div class="stat-item">
-            <span class="stat-number">1M+</span>
-            <span class="stat-label">Usuários</span>
-          </div>
-        </div>
+  <!-- BANNER OFERTAS DO DIA -->
+  <section class="offers-banner">
+    <div class="banner-content">
+      <div class="banner-text">
+        <h1>Ofertas do Dia</h1>
+        <p>Descontos exclusivos e por tempo limitado!</p>
       </div>
-    </section>
-
-    <!-- Lojas Parceiras -->
-    <section class="stores-section">
-      <div class="container">
-        <div class="section-header">
-          <h2><i class="fas fa-store"></i> Lojas Parceiras</h2>
-          <p>Explore produtos das melhores lojas online</p>
+      <div class="banner-stats">
+        <div>
+          <div class="stat-number">50%</div>
+          <div class="stat-label">Desconto</div>
         </div>
-        <div class="stores-grid">
-          <div class="store-card active" data-loja="todas">
-            <i class="fas fa-th store-icon"></i>
-            <div class="store-name">Todas as Lojas</div>
-          </div>
-          <div class="store-card" data-loja="amazon">
-            <img src="https://via.placeholder.com/80x30/ff9900/ffffff?text=Amazon" alt="Logo Amazon" class="store-logo" />
-            <div class="store-name">Amazon</div>
-          </div>
-          <div class="store-card" data-loja="mercadolivre">
-            <img src="https://via.placeholder.com/80x30/ffe600/333333?text=Mercado+Livre" alt="Logo Mercado Livre" class="store-logo" />
-            <div class="store-name">Mercado Livre</div>
-          </div>
-          <div class="store-card" data-loja="shopee">
-            <img src="https://via.placeholder.com/80x30/ee4d2d/ffffff?text=Shopee" alt="Logo Shopee" class="store-logo" />
-            <div class="store-name">Shopee</div>
-          </div>
-          <div class="store-card" data-loja="magalu">
-            <img src="https://via.placeholder.com/80x30/0066cc/ffffff?text=Magalu" alt="Logo Magalu" class="store-logo" />
-            <div class="store-name">Magalu</div>
-          </div>
-          <div class="store-card" data-loja="shein">
-            <img src="https://via.placeholder.com/80x30/000000/ffffff?text=Shein" alt="Logo Shein" class="store-logo" />
-            <div class="store-name">Shein</div>
-          </div>
-          <div class="store-card" data-loja="alibaba">
-            <img src="https://via.placeholder.com/80x30/ff6a00/ffffff?text=Alibaba" alt="Logo Alibaba" class="store-logo" />
-            <div class="store-name">Alibaba</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Produtos -->
-    <section class="products-section">
-      <div class="container">
-        <div class="section-header">
-          <h2 id="ofertas-titulo">🔥 Ofertas do Dia</h2>
-        </div>
-        <div class="loading-container" id="loading-spinner" style="display:none;">
-          <div class="loading-spinner">
-            <div class="spinner"></div>
-            <p>Carregando produtos...</p>
-          </div>
-        </div>
-        <div class="empty-state" id="mensagem-vazia" style="display:none;">
-          <i class="fas fa-box-open empty-icon"></i>
-          <h3>Nenhum produto encontrado</h3>
-          <p>Tente ajustar os filtros ou a busca para encontrar o que procura.</p>
-          <a href="#" class="btn-primary" onclick="window.location.reload()" aria-label="Limpar filtros e recarregar">
-            <i class="fas fa-redo"></i> Limpar Filtros
-          </a>
-        </div>
-        <div class="error-state" id="error-message" style="display:none;">
-          <i class="fas fa-exclamation-circle error-icon"></i>
-          <h3>Erro ao carregar produtos</h3>
-          <p>Verifique sua conexão com a internet.</p>
-          <a href="#" class="btn-primary" onclick="window.location.reload()" aria-label="Tentar novamente">
-            <i class="fas fa-redo"></i> Tentar Novamente
-          </a>
-        </div>
-        <div class="products-grid" id="grid-produtos"></div>
-        <div class="load-more-container">
-          <button class="load-more-btn" id="load-more" aria-label="Carregar mais produtos">
-            <i class="fas fa-plus"></i> Carregar Mais
-          </button>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- Modal Imagem -->
-  <div class="image-modal" id="imageModal" aria-hidden="true">
-    <div class="modal-backdrop"></div>
-    <div class="modal-container" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-      <button class="modal-close" id="modal-close" aria-label="Fechar modal">
-        <i class="fas fa-times"></i>
-      </button>
-      <div class="modal-carousel">
-        <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev" aria-label="Imagem anterior">
-          <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="carousel-btn next" id="modalNext" aria-label="Próxima imagem">
-          <i class="fas fa-chevron-right"></i>
-        </button>
-        <div class="carousel-dots" id="modalCarrosselDots"></div>
-      </div>
-    </div>
-  </div>
-
-  <footer class="main-footer">
-    <div class="container footer-content">
-      <div class="footer-section">
-        <h4>Sobre Nós</h4>
-        <p>
-          O Centro de Compras reúne as melhores ofertas de lojas online confiáveis em um só lugar. Economize tempo e dinheiro com a gente!
-        </p>
-      </div>
-      <div class="footer-section">
-        <h4>Links Úteis</h4>
-        <ul>
-          <li><a href="#">Termos de Uso</a></li>
-          <li><a href="#">Política de Privacidade</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Suporte</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Redes Sociais</h4>
-        <div class="social-links">
-          <a href="#" class="social-link instagram" aria-label="Instagram do Centro de Compras">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="#" class="social-link tiktok" aria-label="TikTok do Centro de Compras">
-            <i class="fab fa-tiktok"></i>
-          </a>
-          <a href="#" class="social-link twitter" aria-label="Twitter do Centro de Compras">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="social-link youtube" aria-label="YouTube do Centro de Compras">
-            <i class="fab fa-youtube"></i>
-          </a>
+        <div>
+          <div class="stat-number">+500</div>
+          <div class="stat-label">Produtos</div>
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      <div class="container">
-        <p>
-          <i class="fas fa-info-circle"></i> Preços e condições estão sujeitos à alteração sem aviso prévio. Verifique as lojas parceiras.
-        </p>
-        <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
+  </section>
+
+  <!-- CATEGORIAS -->
+  <section class="categories">
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/1810/1810678.png" alt="Eletrônicos">
+      <p>Eletrônicos</p>
+    </div>
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/892/892458.png" alt="Moda">
+      <p>Moda</p>
+    </div>
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/3081/3081559.png" alt="Casa">
+      <p>Casa</p>
+    </div>
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/1864/1864509.png" alt="Esportes">
+      <p>Esportes</p>
+    </div>
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/1183/1183672.png" alt="Beleza">
+      <p>Beleza</p>
+    </div>
+    <div class="category-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/3125/3125713.png" alt="Brinquedos">
+      <p>Brinquedos</p>
+    </div>
+  </section>
+
+  <!-- LOJAS PARCEIRAS -->
+  <section class="stores-section">
+    <h2>Lojas Parceiras</h2>
+    <div class="stores-grid">
+      <div class="store-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+      </div>
+      <div class="store-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Shopee_logo.svg" alt="Shopee">
+      </div>
+      <div class="store-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/SHEIN_logo.svg" alt="Shein">
+      </div>
+      <div class="store-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Magalu_logo.png" alt="Magalu">
+      </div>
+      <div class="store-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/MercadoLivre.svg" alt="Mercado Livre">
       </div>
     </div>
-  </footer>
+  </section>
 
-  <!-- Botão flutuante WhatsApp -->
+  <!-- PRODUTOS -->
+  <section class="products-grid">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200" alt="Produto 1">
+      <div class="product-info">
+        <h3>Produto Exemplo 1</h3>
+        <p class="price">R$ 99,90</p>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200" alt="Produto 2">
+      <div class="product-info">
+        <h3>Produto Exemplo 2</h3>
+        <p class="price">R$ 149,90</p>
+      </div>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x200" alt="Produto 3">
+      <div class="product-info">
+        <h3>Produto Exemplo 3</h3>
+        <p class="price">R$ 79,90</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- BOTÃO WHATSAPP -->
   <div class="floating-assistant">
-    <a href="https://wa.me/5511999999999" class="floating-btn" aria-label="Fale conosco pelo WhatsApp">
+    <a href="https://wa.me/5599999999999" target="_blank" class="floating-btn">
       <i class="fab fa-whatsapp"></i>
-      <div class="floating-tooltip">
-        <span>Fale Conosco</span>
-        <small>Atendimento via WhatsApp</small>
-      </div>
+      <span class="floating-tooltip">Fale conosco no WhatsApp</span>
     </a>
   </div>
 
-  <script>
-    // Atualiza o ano no rodapé
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Controle sidebar categorias
-    const categoriesToggle = document.getElementById('categories-toggle');
-    const categoriesSidebar = document.getElementById('categories-sidebar');
-    const closeSidebarBtn = document.getElementById('close-sidebar');
-    const overlay = document.getElementById('overlay');
-
-    categoriesToggle.addEventListener('click', () => {
-      categoriesSidebar.classList.add('active');
-      overlay.classList.add('active');
-    });
-    closeSidebarBtn.addEventListener('click', () => {
-      categoriesSidebar.classList.remove('active');
-      overlay.classList.remove('active');
-    });
-    overlay.addEventListener('click', () => {
-      categoriesSidebar.classList.remove('active');
-      overlay.classList.remove('active');
-    });
-
-    // Script simples para abrir/fechar modal (exemplo)
-    const modal = document.getElementById('imageModal');
-    const modalClose = document.getElementById('modal-close');
-
-    modalClose.addEventListener('click', () => {
-      modal.style.display = 'none';
-      modal.setAttribute('aria-hidden', 'true');
-    });
-  </script>
+  <!-- RODAPÉ -->
+  <footer>
+    <p>&copy; 2025 Centro de Compras - Todos os direitos reservados</p>
+  </footer>
 
 </body>
 </html>
