--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+  <meta name="description" content="Centro de Compras - Ofertas de lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e mais. Links de afiliado atualizados e seguros.">
   <title>Centro de Compras</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -50,27 +50,27 @@
   <!-- CATEGORIAS -->
   <section class="categories">
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/1810/1810678.png" alt="Eletrônicos">
+      <img src="logos/eletronicos.png" alt="Eletrônicos">
       <p>Eletrônicos</p>
     </div>
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/892/892458.png" alt="Moda">
+      <img src="logos/moda.png" alt="Moda">
       <p>Moda</p>
     </div>
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/3081/3081559.png" alt="Casa">
+      <img src="logos/casa.png" alt="Casa">
       <p>Casa</p>
     </div>
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/1864/1864509.png" alt="Esportes">
+      <img src="logos/esportes.png" alt="Esportes">
       <p>Esportes</p>
     </div>
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/1183/1183672.png" alt="Beleza">
+      <img src="logos/beleza.png" alt="Beleza">
       <p>Beleza</p>
     </div>
     <div class="category-card">
-      <img src="https://cdn-icons-png.flaticon.com/512/3125/3125713.png" alt="Brinquedos">
+      <img src="logos/brinquedos.png" alt="Brinquedos">
       <p>Brinquedos</p>
     </div>
   </section>
@@ -80,46 +80,26 @@
     <h2>Lojas Parceiras</h2>
     <div class="stores-grid">
       <div class="store-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+        <img src="logos/amazon.png" alt="Amazon">
       </div>
       <div class="store-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Shopee_logo.svg" alt="Shopee">
+        <img src="logos/shopee.png" alt="Shopee">
       </div>
       <div class="store-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/SHEIN_logo.svg" alt="Shein">
+        <img src="logos/shein.png" alt="Shein">
       </div>
       <div class="store-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Magalu_logo.png" alt="Magalu">
+        <img src="logos/magalu.png" alt="Magalu">
       </div>
       <div class="store-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/MercadoLivre.svg" alt="Mercado Livre">
+        <img src="logos/mercadolivre.png" alt="Mercado Livre">
       </div>
     </div>
   </section>
 
-  <!-- PRODUTOS -->
-  <section class="products-grid">
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x200" alt="Produto 1">
-      <div class="product-info">
-        <h3>Produto Exemplo 1</h3>
-        <p class="price">R$ 99,90</p>
-      </div>
-    </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x200" alt="Produto 2">
-      <div class="product-info">
-        <h3>Produto Exemplo 2</h3>
-        <p class="price">R$ 149,90</p>
-      </div>
-    </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x200" alt="Produto 3">
-      <div class="product-info">
-        <h3>Produto Exemplo 3</h3>
-        <p class="price">R$ 79,90</p>
-      </div>
-    </div>
+  <!-- ÁREA DA SUA API -->
+  <section class="products-grid" id="lista-produtos">
+    <!-- Sua API vai injetar os produtos aqui -->
   </section>
 
   <!-- BOTÃO WHATSAPP -->
@@ -132,7 +112,15 @@
 
   <!-- RODAPÉ -->
   <footer>
-    <p>&copy; 2025 Centro de Compras - Todos os direitos reservados</p>
+    <div class="footer-content">
+      <p>&copy; 2025 Centro de Compras - Todos os direitos reservados.</p>
+      <p class="disclaimer">
+        Este site participa de programas de afiliados e pode receber comissão por compras qualificadas realizadas através dos links disponibilizados.
+      </p>
+      <p class="about">
+        Nosso objetivo é reunir as melhores ofertas de grandes varejistas online, garantindo praticidade e economia para você.
+      </p>
+    </div>
   </footer>
 
 </body>
