--- a/index.html
+++ b/index.html
@@ -1,110 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Centro de Compras</title>
-  <meta name="description" content="Encontre as melhores ofertas em produtos de diversas lojas online no Centro de Compras. Site de afiliado.">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seu Site de Afiliados</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="main-header">
-    <div class="header-top">
-      <div class="container">
-        <span><i class="fas fa-phone-alt"></i> (21) 9999-9999</span>
-        <span><i class="fas fa-envelope"></i> contato@centrodecompras.com</span>
-      </div>
-    </div>
-    <div class="header-main">
-      <div class="container header-content">
-        <img src="https://via.placeholder.com/200x50/3483fa/ffffff?text=Logo" alt="Logo Centro de Compras" class="logo" id="site-logo">
-        <div class="search-section">
-          <input type="text" id="busca" placeholder="Pesquisar produtos...">
-          <button id="search-btn"><i class="fas fa-search"></i></button>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Logo do Site">
         </div>
-        <div class="header-actions">
-          <a href="https://wa.me/5511999999999" class="action-btn whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
-          <a href="https://t.me/centrodecompras" class="action-btn telegram-btn"><i class="fab fa-telegram-plane"></i></a>
-          <a href="/admin-xyz-123.html" class="action-btn admin-btn" id="admin-btn" style="display:none;"><i class="fas fa-user-shield"></i></a>
-        </div>
-      </div>
-    </div>
-  </header>
+        <nav>
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main class="main-content">
-    <!-- Banner ofertas do dia -->
-    <section class="offers-banner">
-      <div class="container">
-        <h1>🔥 Ofertas do Dia</h1>
-        <p>Economize até 70% em milhares de produtos!</p>
-      </div>
+    <section id="home" class="hero">
+        <h1>Encontre os Melhores Produtos com Descontos Exclusivos</h1>
+        <p>Compare preços, leia avaliações e compre com segurança através dos nossos links de afiliados.</p>
+        <a href="#produtos" class="btn-primary">Ver Produtos</a>
     </section>
 
-    <!-- Lojas parceiras -->
-    <section class="stores-section">
-      <div class="container">
-        <h2>Lojas Parceiras</h2>
-        <div class="stores-grid">
-          <div class="store-card" data-loja="amazon"><img src="logos/amazon.png" alt="Amazon"></div>
-          <div class="store-card" data-loja="mercadolivre"><img src="logos/mercadolivre.jpg" alt="Mercado Livre"></div>
-          <div class="store-card" data-loja="shopee"><img src="logos/shopee.png" alt="Shopee"></div>
-          <div class="store-card" data-loja="magalu"><img src="logos/magalu.png" alt="Magalu"></div>
-          <div class="store-card" data-loja="shein"><img src="logos/shein.png" alt="Shein"></div>
-          <div class="store-card" data-loja="alibaba"><img src="logos/alibaba.png" alt="Alibaba"></div>
+    <section id="produtos" class="produtos">
+        <h2>Produtos Recomendados</h2>
+        <div class="produto-card">
+            <img src="produto1.jpg" alt="Produto 1">
+            <h3>Produto 1</h3>
+            <p>Descrição do produto 1.</p>
+            <a href="link-afiliado1" class="btn-secundario">Comprar</a>
         </div>
-      </div>
+        <div class="produto-card">
+            <img src="produto2.jpg" alt="Produto 2">
+            <h3>Produto 2</h3>
+            <p>Descrição do produto 2.</p>
+            <a href="link-afiliado2" class="btn-secundario">Comprar</a>
+        </div>
+        <!-- Adicione mais cards conforme necessário -->
     </section>
 
-    <!-- Produtos -->
-    <section class="products-section">
-      <div class="container">
-        <h2>🔥 Ofertas do Dia</h2>
-        <div class="loading-container" id="loading-spinner">
-          <div class="spinner"></div>
-          <p>Carregando produtos...</p>
-        </div>
-        <div class="empty-state" id="mensagem-vazia">
-          <i class="fas fa-box-open"></i>
-          <h3>Nenhum produto encontrado</h3>
-          <p>Tente ajustar os filtros ou a busca.</p>
-        </div>
-        <div class="error-state" id="error-message">
-          <i class="fas fa-exclamation-circle"></i>
-          <h3>Erro ao carregar produtos</h3>
-          <p>Verifique sua conexão com a internet.</p>
-        </div>
-        <div class="products-grid" id="grid-produtos"></div>
-        <div class="load-more-container">
-          <button class="load-more-btn" id="load-more">Carregar Mais</button>
-        </div>
-      </div>
+    <section id="sobre" class="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Somos uma plataforma dedicada a ajudar você a encontrar os melhores produtos com os melhores preços através de links de afiliados.</p>
     </section>
-  </main>
 
-  <!-- Rodapé -->
-  <footer class="main-footer">
-    <div class="container">
-      <p>Centro de Compras é um site de afiliado. Preços e promoções são fornecidos pelas lojas parceiras.</p>
-      <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
-    </div>
-  </footer>
+    <section id="contato" class="contato">
+        <h2>Entre em Contato</h2>
+        <form action="enviar-contato.php" method="POST">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" required></textarea>
+            <button type="submit" class="btn-primary">Enviar</button>
+        </form>
+    </section>
 
-  <!-- Modal imagens -->
-  <div class="image-modal" id="imageModal">
-    <div class="modal-backdrop"></div>
-    <div class="modal-container">
-      <button class="modal-close" id="modal-close"><i class="fas fa-times"></i></button>
-      <div class="modal-carousel">
-        <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev">◄</button>
-        <button class="carousel-btn next" id="modalNext">►</button>
-        <div class="carousel-dots" id="modalCarrosselDots"></div>
-      </div>
-    </div>
-  </div>
+    <footer>
+        <p>&copy; 2025 Seu Site de Afiliados. Todos os direitos reservados.</p>
+    </footer>
 
-  <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
