--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="logos/logo.png" alt="Logo Centro de Compras" class="logo" id="site-logo" />
         <div class="search-section">
           <div class="search-container">
-            <input type="text" id="busca" placeholder="Pesquisar produtos..." aria-label="Pesquisar produtos" />
+            <input type="text" id="busca" class="search-input" placeholder="Pesquisar produtos..." aria-label="Pesquisar produtos" />
             <button class="search-btn" aria-label="Iniciar busca"><i class="fas fa-search"></i></button>
           </div>
         </div>
@@ -210,7 +210,7 @@
           <p><i class="fas fa-info-circle"></i> Preços e condições estão sujeitos à alteração sem aviso prévio. Verifique as lojas parceiras.</p>
         </div>
         <div class="footer-copyright">
-          <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
+          <p>&copy; <span id="year">2025</span> Centro de Compras. Todos os direitos reservados.</p>
         </div>
       </div>
     </div>
