--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centro de Compras</title>
+  <title>Centro de Compra</title>
   <meta name="description" content="Encontre as melhores ofertas em produtos de diversas lojas online no Centro de Compras." />
   <meta name="keywords" content="e-commerce, compras online, ofertas, produtos" />
-  <meta name="author" content="Centro de Compras" />
+  <meta name="author" content="Centro de Compra" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
