--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="header-main">
       <div class="container header-content">
-        <img src="logos/logo.png" alt="Logo Centro de Compras" class="logo" id="site-logo" />
+        <img src="logos/logoscentrodecompras.jpeg" alt="Logo Centro de Compras" class="logo" id="site-logo" />
         <div class="search-section">
           <div class="search-container">
             <input type="text" id="busca" class="search-input" placeholder="Pesquisar produtos..." aria-label="Pesquisar produtos" />
