--- a/index.html
+++ b/index.html
@@ -159,31 +159,31 @@
             <div class="store-name">Todas</div>
           </div>
           <div class="store-card" data-loja="amazon">
-            <img src="/placeholder.svg?height=50&width=50" alt="Amazon" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon" class="store-logo" />
             <div class="store-name">Amazon</div>
           </div>
           <div class="store-card" data-loja="mercadolivre">
-            <img src="/placeholder.svg?height=50&width=50" alt="Mercado Livre" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Mercado_Livre_logo.svg" alt="Mercado Livre" class="store-logo" />
             <div class="store-name">Mercado Livre</div>
           </div>
           <div class="store-card" data-loja="shopee">
-            <img src="/placeholder.svg?height=50&width=50" alt="Shopee" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Shopee_logo.svg" alt="Shopee" class="store-logo" />
             <div class="store-name">Shopee</div>
           </div>
           <div class="store-card" data-loja="magalu">
-            <img src="/placeholder.svg?height=50&width=50" alt="Magalu" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/79/Magalu_logo.svg" alt="Magalu" class="store-logo" />
             <div class="store-name">Magalu</div>
           </div>
           <div class="store-card" data-loja="shein">
-            <img src="/placeholder.svg?height=50&width=50" alt="Shein" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Shein_logo.svg" alt="Shein" class="store-logo" />
             <div class="store-name">Shein</div>
           </div>
           <div class="store-card" data-loja="alibaba">
-            <img src="/placeholder.svg?height=50&width=50" alt="Alibaba" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Alibaba_Logo.svg" alt="Alibaba" class="store-logo" />
             <div class="store-name">Alibaba</div>
           </div>
           <div class="store-card" data-loja="americanas">
-            <img src="/placeholder.svg?height=50&width=50" alt="Americanas" class="store-logo" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Americanas_logo.svg" alt="Americanas" class="store-logo" />
             <div class="store-name">Americanas</div>
           </div>
         </div>
@@ -231,25 +231,6 @@
       </div>
     </section>
   </main>
-
-  <div class="image-modal" id="imageModal">
-    <div class="modal-backdrop"></div>
-    <div class="modal-container">
-      <button class="modal-close" id="modal-close" aria-label="Fechar modal">
-        <i class="fas fa-times"></i>
-      </button>
-      <div class="modal-carousel">
-        <div class="carousel-images" id="modalCarrosselImagens"></div>
-        <button class="carousel-btn prev" id="modalPrev" aria-label="Imagem anterior">
-          <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="carousel-btn next" id="modalNext" aria-label="Próxima imagem">
-          <i class="fas fa-chevron-right"></i>
-        </button>
-        <div class="carousel-dots" id="modalCarrosselDots"></div>
-      </div>
-    </div>
-  </div>
 
   <footer class="main-footer" id="contato">
     <div class="container footer-content">
